<resources>
    <string name="app_name">LaLaLaWorkers</string>
    <string name="app_name__wversion">LaLaLaWorker V1.0.0</string>
    <string name="app_account_worker_type">lalalaworker</string>
    <string name="username">Sims Atlas</string>
    <string name="lalalawplus">Find your worker easily</string>
    <string name="connection_error_message">Unable to connect to server\nPlease check your internet connectivity</string>
    <string name="other_ioexception_message">There was a problem when downloading data</string>
    <string name="btn_reload">Retry</string>
    <string name="btn_cancel">Cancel</string>
    <string name="connection_error_message_account">Unable to connect to server\nIt was impossible to sign in your worker account\nPlease check your internet connectivity</string>
    <string name="other_ioexception_message_account">There was a problem when downloading data\nIt was impossible to sign in your worker account</string>
    <string name="progress_dialog_message">Applying modifications...</string>
    <string name="progress_dialog_message_wait">Please Wait</string>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="days">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string name="call_label">Calls</string>
    <string name="sms_label">SMS</string>
    <string name="nav_simple_profile">User Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_share_app">Share App</string>
    <string name="nav_report_problem">Report a problem with the app</string>
    <string name="nav_help">Help</string>
    <string name="nav_about">About</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_history">History</string>
    <string name="tab_search">Search</string>
    <string name="tab_account">Account</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="closeapp">Press again BACK for close App</string>
    <string name="main_menu_search">Great Research</string>
    <string name="search_options">Search Options</string>
    <string name="search_filters">Search Filters</string>
    <string name="search_dialog_title">Enter Search Parameters</string>
    <string name="search_dialog_work">Work</string>
    <string name="search_dialog_town">Town</string>
    <string name="search_dialog_street">Street</string>
    <string name="search_dialog_ok">Search</string>
    <string name="search_dialog_cancel">Cancel</string>
    <string name="search_dialog_reset">Reset</string>
    <string name="sort_dialog_title">Sort By</string>
    <string name="sort_dialog_0">Nothing</string>
    <string name="sort_dialog_1">Notes</string>
    <string name="sort_dialog_2">Sollicitations</string>
    <string name="sort_dialog_ok">Sort</string>
    <string name="sort_dialog_cancel">Cancel</string>
    <string name="solis">Sollicitations</string>
    <string name="frag_account_note">Note</string>
    <string name="frag_account_works">My Works</string>
    <string name="frag_account_comments">My Comments</string>
    <string name="frag_account_strikes">My Strikes</string>
    <string name="frag_account_somenews">Some News</string>
    <string name="frag_account_settings">Account Settings</string>
    <string name="frag_account_modify">Modify</string>
    <string name="frag_account_phone">Phone</string>
    <string name="frag_account_nationality">Nationality</string>
    <string name="frag_account_town">Town</string>
    <string name="frag_account_street">Street</string>
    <string name="frag_account_modify_passwd">Modify Password</string>
    <string name="worker_vh_localisation">Live in</string>
    <string name="worker_vh_nationality">Nationality</string>
    <string name="worker_vh_phonecall">Call</string>
    <string name="worker_vh_phonesms">Send SMS</string>
    <string name="worker_vh_note">Note</string>
    <string name="comms_vh_comment">Comment</string>
    <string name="worker_infos_label">Worker Infos</string>
    <string name="worker_works_label">Works</string>
    <string name="worker_comms_label">Comments</string>
    <string name="worker_activity_error_noting">There is an error when submitting your note</string>
    <string name="worker_activity_error_inc_sollis">There is an error when saving your sollis</string>
    <string name="worker_activity_error_comment_note_signal">You cannot ? if you did not contact him/her during the last 30 days.</string>
    <string name="plus_note">Note a worker</string>
    <string name="plus_comment">Comment a worker</string>
    <string name="plus_signal">Signal a worker</string>
    <string name="strike_worker">Signal this worker</string>
    <string name="share_worker">Recommand this worker to a friend</string>
    <string name="see_profile">Profile</string>
    <string name="clear_history">Clear</string>
    <string name="activity_edit_worker_infos_toolbar_title">Edit Worker Infos</string>
    <string name="activity_edit_user_infos_toolbar_title">Edit User Infos</string>
    <string name="passwd_request_reason">Please enter your password for apply your modifications.</string>
    <string name="activity_edit_worker_infos_apply">Apply</string>
    <string name="passwd_hint">Enter your password</string>
    <string name="activity_edit_worker_infos_phone_hint">Phone</string>
    <string name="activity_edit_worker_infos_nationality_hint">Nationality</string>
    <string name="activity_edit_worker_infos_town_hint">Town</string>
    <string name="activity_edit_worker_infos_street_hint">Street</string>
    <string name="edit_success">Your modifications have been applied successfully</string>
    <string name="activity_change_passwd_toolbar_title">Change Password</string>
    <string name="activity_change_passwd_old">Old Password</string>
    <string name="activity_change_passwd_new">New Password</string>
    <string name="activity_change_passwd_confirm">Confirm New Password</string>
    <string name="activity_change_passwd_apply">Apply</string>
    <string name="wrong_old_passwd">Please enter your correct password</string>
    <string name="activity_register_user_name_hint">Please enter your name</string>
    <string name="activity_register_user_continue">Continue</string>
    <string name="activity_register_user_welcome">Welcome to LaLaLaWorker</string>
    <string name="activity_register_user_name_validator">Please enter your name</string>
    <string name="activity_simple_account_index">User Account Informations</string>
    <string name="activity_simple_account_modify">Modify</string>
    <string name="activity_simple_account_name_label">Name</string>
    <string name="activity_simple_account_town_label">Town</string>
    <string name="activity_simple_account_street_label">Street</string>
    <string name="activity_edit_user_infos_apply">Apply</string>
    <string name="activity_edit_user_infos_title_name">Modify name</string>
    <string name="activity_edit_user_infos_title_localisation">Modify localisation</string>
    <string name="activity_worker_works_btn_add_work">Add a work</string>
    <string name="worker_works_full_list_vh_delete_work">Remove</string>
    <string name="activity_worker_works_toolbar_title">My works</string>
    <string name="activity_add_work_add_btn">Add</string>
    <string name="activity_add_work_toolbar_title">Add Work</string>
    <string name="activity_register_worker_label">Create My Worker Account</string>
    <string name="activity_registry_worker_step1">Step 1\nPersonnal Informations</string>
    <string name="activity_registry_worker_step1_text">Personnal Informations</string>
    <string name="activity_register_worker_phone_label">Phone Number</string>
    <string name="activity_register_worker_nationality_label">Nationality</string>
    <string name="activity_register_worker_town_label">Town</string>
    <string name="activity_register_worker_street_label">Street</string>
    <string name="activity_register_worker_passwd_label">Password</string>
    <string name="activity_register_worker_confirmpasswd_label">Confirm Password</string>
    <string name="activity_register_worker_accept_conditions_text">I read and accepted the </string>
    <string name="activity_register_worker_conditions_link">use\'s conditions</string>
    <string name="activity_register_worker_continue">Create Account</string>
    <string name="activity_add_work_register_label">Your Account has been created successfully</string>
    <string name="activity_add_work_register_step2">Step 2\nAdd your works</string>
    <string name="activity_add_work_register_add_work">Add Work</string>
    <string name="activity_add_work_register_continue_ignore">Ignore</string>
    <string name="activity_add_work_register_continue_">Continue</string>
    <string name="activity_add_work_register_work_to_add">Enter a Work</string>
    <string name="no_work_validation_message">Please enter a work</string>
    <string name="has_already_this_work_validation_msg">You have already this work</string>
    <string name="frag_account_no_account_message">You have not a Worker Account</string>
    <string name="frag_account_create_worker_account">Create a Worker Account</string>
    <string name="frag_account_validation_dialog_cancel">Cancel</string>
    <string name="validation_message_phone">Please enter your phone number</string>
    <string name="validation_message_phone_regex">Your phone number does not matches with the Cameroon\'s phone numbers</string>
    <string name="validation_message_nationality">Please enter your nationality</string>
    <string name="validation_message_town">Please enter your town</string>
    <string name="validation_message_street">Please enter your street</string>
    <string name="validation_message_passwd">Please enter a password</string>
    <string name="validation_message_confirm_passwd">Passwords don\'t match</string>
    <string name="validation_message_license_accept">You can\'t have a Worker Account if you refuse to accept License terms</string>
    <string name="frag_signal_worker_header">Why do you want to signal</string>
    <string name="enter_server_add">Enter server address</string>
    <string name="server_add_label">Server add</string>
    <string name="frag_modify_server_add_ok">Apply</string>
    <string name="frag_modify_server_add_cancel">Cancel</string>
    <string name="frag_report_problem_title">Report a problem with app</string>
    <string name="frag_report_problem_usrname">Your name</string>
    <string name="frag_report_problem_usrproblem">Your problem</string>
    <string name="frag_report_problem_report">Report</string>
    <string name="frag_report_problem_cancel">Cancel</string>
    <string name="frag_reactivate_acc_whattodofor">
        If you want to reactivate or prolonge your worker account, go to an Express Union Mobile Money point
        and do a money transfert to LaLaLaWorkers Account following this points:\n
            \t 250 FCFA ---> 3 months\n
            \t 500 FCFA ---> 5 months\n
            \t 1000 FCFA ---> 1 year\n
            \t 1500 FCFA ---> 18 months\n
            \t 1700 FCFA ---> 2 years\n
        After do that click on the button ASK FOR REACTIVATION/ASK FOR EXTENSION and wait for reactivation/extension. The reactivation/extension
        of your account can take between 5 minutes and 24 hours.
    </string>
    <string name="frag_reactivate_acc_reac">ASK FOR REACTIVATION</string>
    <string name="frag_reactivate_acc_cancel">Cancel</string>
</resources>