<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/worker_vh_phonecall"
        android:id="@+id/activity_worker_menu_phonecall"
        android:icon="@drawable/ic_call_white_48dp"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/worker_vh_phonesms"
        android:icon="@drawable/ic_textsms_white_48dp"
        android:id="@+id/activity_worker_menu_phonesms"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/worker_vh_note"
        android:id="@+id/activity_worker_menu_note"
        app:showAsAction="never"/>

    <item
        android:title="@string/comms_vh_comment"
        android:id="@+id/activity_worker_menu_comment"
        app:showAsAction="never"/>

    <item
        android:title="@string/share_worker"
        android:id="@+id/activity_worker_menu_shareworker"
        app:showAsAction="never"/>

    <item
        android:title="@string/strike_worker"
        android:id="@+id/activity_worker_menu_strikeworker"
        app:showAsAction="never"/>

</menu>