<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/app_bar_account_news"
        android:icon="@drawable/ic_fiber_new_white_36dp"
        android:title="@string/frag_account_somenews"
        app:showAsAction="always"/>

    <item
        android:id="@+id/app_bar_account_settings"
        android:icon="@drawable/ic_settings_white_36dp"
        android:title="@string/frag_account_settings"
        app:showAsAction="always"/>

    <item
        android:id="@+id/app_bar_myworks"
        android:title="@string/frag_account_works"
        app:showAsAction="never"/>

    <item
        android:id="@+id/app_bar_mycomments"
        android:title="@string/frag_account_comments"
        app:showAsAction="never"/>

    <item
        android:id="@+id/app_bar_mystrikes"
        android:title="@string/frag_account_strikes"
        app:showAsAction="never"/>
</menu>