<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cm.g2i.lalalaworker.ui.fragment.SortQueryDialog">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_dialog_title"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:id="@+id/sort_dialog_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio"
            android:layout_below="@id/sort_dialog_title"
            android:paddingLeft="@dimen/activity_horizontal_margin">

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_dialog_0"
                android:id="@+id/sort_dialog_0"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_dialog_1"
                android:id="@+id/sort_dialog_1"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_dialog_2"
                android:id="@+id/sort_dialog_2"/>

        </RadioGroup>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sort_dialog_ok"
            android:text="@string/sort_dialog_ok"
            android:layout_below="@id/radio"
            android:layout_alignParentRight="true"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/colorAccent"
            android:imeOptions="actionDone"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sort_dialog_cancel"
            android:text="@string/sort_dialog_cancel"
            android:layout_toLeftOf="@id/sort_dialog_ok"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/colorAccent"
            android:layout_below="@id/radio"/>


    </RelativeLayout>

</RelativeLayout>
