<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="cm.g2i.lalalaworker.ui.fragment.ReportProblemFragment"
    android:padding="@dimen/small_padding"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frag_report_problem_title"
        android:textSize="@dimen/text_normal"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:text="@string/frag_report_problem_title"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/frag_report_problem_til1"
        android:layout_below="@id/frag_report_problem_title"
        android:layout_marginTop="@dimen/inter_view_margin"
        android:textSize="@dimen/text_small"
        android:hint="@string/frag_report_problem_usrname">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/frag_report_problem_usrname"
            android:textSize="@dimen/text_small"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/frag_report_problem_til2"
        android:layout_below="@id/frag_report_problem_til1"
        android:layout_marginTop="@dimen/inter_view_small_margin"
        android:textSize="@dimen/text_small"
        android:hint="@string/frag_report_problem_usrproblem"
        android:layout_marginBottom="@dimen/inter_view_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/frag_report_problem_usrproblem"
            android:textSize="@dimen/text_small"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frag_report_problem_report"
        android:text="@string/frag_report_problem_report"
        android:layout_below="@id/frag_report_problem_til2"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_alignParentRight="true"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frag_report_problem_cancel"
        android:text="@string/frag_report_problem_cancel"
        android:layout_below="@id/frag_report_problem_til2"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_toLeftOf="@id/frag_report_problem_report"/>

</RelativeLayout>
